Added Vector2f Support, changed window size & added trans info to entiy